--- a/_posts/0000-01-02-pkv9798.md
+++ b/_posts/0000-01-02-pkv9798.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our third github slide!"
 ---
 
 Your text "trying to pull"
