updating extra info

--- a/_posts/0000-01-02-pkv9798.md
+++ b/_posts/0000-01-02-pkv9798.md
@@ -3,5 +3,7 @@ layout: slide
 title: "Welcome to our third github slide!"
 ---
 
+Hi i am trying github desktop.
+
 Your text "trying to pull"
 Use the left arrow to go back!
